# CUDA-DNN

./: CMakeLists.txt  README.md  main.cu
NN/: nn_abstract.cu  nn_abstract.cuh  nn_parallel.cu  nn_parallel.cuh  nn_sequantial.cu  nn_sequantial.cuh
dataset/: coordinates_dataset.cu  coordinates_dataset.cuh  dataset.cu  dataset.cuh
layers/: linear_layer.cu  linear_layer.cuh  nn_layer.cu  nn_layer.cuh  relu_activation.cu  relu_activation.cuh  sigmoid_activation.cu  sigmoid_activation.cuh
utils/: bce_cost.cu  bce_cost.cuh  cost.cu  cost.cuh  matrix.cu  matrix.cuh  nn_exeption.cu  nn_exeption.cuh  shape.cu  shape.cuh
